syntax = "proto3";
package common;

import "hopeio/utils/patch/go.proto";

option go_package = "github.com/liov/hoper/server/go/protobuf/common";
option java_package = "xyz.hoper.protobuf.common";
option java_multiple_files = true;


message TimeStamp {
    int64 t = 1;
}

message Model{
    string createdAt = 1 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
    string updateAt = 2 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
    string deletedAt = 3 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
}